Fix display on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,39 @@ main {
 .primary-btn:hover {
   background-color: #f38164cc;
 }
+
+@media (max-width: 1000px) {
+  #screen > .number {
+    font-size: 2.5em;
+  }
+
+  .section > .number {
+    font-size: 1.5rem;
+  }
+
+  .num-btn,
+  .op-btn,
+  .equation {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 650px) {
+  #history {
+    display: none;
+  }
+
+  main {
+    grid-template-columns: 1fr;
+  }
+
+  .num-btn,
+  .op-btn,
+  .equation {
+    font-size: 1rem;
+  }
+
+  #screen > .number {
+    font-size: 1.5rem;
+  }
+}
